<resources>
    <string name="app_name">Chat</string>
    <string name="Email">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_activity_header">Sign Up</string>
    <string name="name">Name</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="online">Online</string>
    <string name="profile_image">Profile Image</string>
</resources>