<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:clipToPadding="false"
    android:padding="@dimen/_24sdp"
    tools:context=".activities.SignInActivity">


    <LinearLayout
        android:id="@+id/signIn_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signIn_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textAlignment="center"
            android:textSize="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="@id/signIn_form"
            app:layout_constraintStart_toStartOf="@id/signIn_form"
            tools:ignore="MissingConstraints" />




        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_100sdp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/signIn_text_view" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/inputUserName" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:text="@string/sign_in_btn"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <ProgressBar
                android:id="@+id/signInProgressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textStyle="bold"
                android:text="@string/sign_up" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>