<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">


    <LinearLayout
        android:id="@+id/signUp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/signIn_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_activity_header"
            android:textAlignment="center"
            android:textSize="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="@id/signIn_form"
            app:layout_constraintStart_toStartOf="@id/signIn_form"
            tools:ignore="MissingConstraints" />

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Image"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>
        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_45sdp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/signIn_text_view" />


        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_45sdp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/inputName" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="@dimen/_45sdp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="@dimen/_45sdp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:text="@string/sign_up_btn"
                app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

            <ProgressBar
                android:id="@+id/SignUpProgressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account ?" />

            <TextView
                android:id="@+id/textSingIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/sign_in_btn"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>